--- a/app/build.gradle
+++ b/app/build.gradle
@@ -3,12 +3,13 @@ apply plugin: 'com.android.application'
 android {
     compileSdkVersion 26
     defaultConfig {
-        applicationId "com.example.mika.nineteen"
+        applicationId "ru.maryonegames.android.nineteen"
         minSdkVersion 16
         targetSdkVersion 26
-        versionCode 1
-        versionName "0.1"
+        versionCode 2
+        versionName "0.3"
         testInstrumentationRunner "android.support.test.runner.AndroidJUnitRunner"
+
     }
     buildTypes {
         release {
@@ -25,4 +26,7 @@ dependencies {
     testImplementation 'junit:junit:4.12'
     androidTestImplementation 'com.android.support.test:runner:1.0.1'
     androidTestImplementation 'com.android.support.test.espresso:espresso-core:3.0.1'
+    compile 'com.google.code.gson:gson:2.6.2'
+    //implementation 'com.google.android.gms:play-services-ads:11.8.0'
+
 }
